9287 : dladm Segmentation Fault (core dumped) on unknown field